// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/App Bar Default Elevation 1`] = `
<header
  className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary MuiPaper-elevation2"
>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <div
      className="NatDSAppBarHighlight NatDSAppBarHighlight-root-63"
    >
      <h1
        className="MuiTypography-root MuiTypography-h6"
      >
        Default elevation
      </h1>
    </div>
  </div>
</header>
`;

exports[`Storyshots Components/App Bar Default color 1`] = `
<header
  className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorDefault NatDSAppBar-colorDefault-55 MuiPaper-elevation2"
>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <div
      className="NatDSAppBarHighlight NatDSAppBarHighlight-root-57"
    >
      <h1
        className="MuiTypography-root MuiTypography-h6"
      >
        Default color
      </h1>
    </div>
  </div>
</header>
`;

exports[`Storyshots Components/App Bar Inherit color 1`] = `
<header
  className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorInherit MuiPaper-elevation2"
>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <div
      className="NatDSAppBarHighlight NatDSAppBarHighlight-root-60"
    >
      <h1
        className="MuiTypography-root MuiTypography-h6"
      >
        Inherit color
      </h1>
    </div>
  </div>
</header>
`;

exports[`Storyshots Components/App Bar No Elevation 1`] = `
<header
  className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary MuiPaper-elevation0"
>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <div
      className="NatDSAppBarHighlight NatDSAppBarHighlight-root-66"
    >
      <h1
        className="MuiTypography-root MuiTypography-h6"
      >
        No elevation
      </h1>
    </div>
  </div>
</header>
`;

exports[`Storyshots Components/App Bar Playground 1`] = `
<header
  className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary MuiPaper-elevation2"
>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <div
      className="NatDSAppBarHighlight NatDSAppBarHighlight-root-24"
    >
      <h1
        className="MuiTypography-root MuiTypography-h6"
      >
        App Bar text
      </h1>
    </div>
  </div>
</header>
`;

exports[`Storyshots Components/App Bar Primary color 1`] = `
<header
  className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary MuiPaper-elevation2"
>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <div
      className="NatDSAppBarHighlight NatDSAppBarHighlight-root-34"
    >
      <h1
        className="MuiTypography-root MuiTypography-h6"
      >
        Primary color
      </h1>
    </div>
  </div>
</header>
`;

exports[`Storyshots Components/App Bar Secondary color 1`] = `
<header
  className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorSecondary MuiPaper-elevation2"
>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <div
      className="NatDSAppBarHighlight NatDSAppBarHighlight-root-51"
    >
      <h1
        className="MuiTypography-root MuiTypography-h6"
      >
        Secondary color
      </h1>
    </div>
  </div>
</header>
`;

exports[`Storyshots Components/App Bar With Icon Buttons 1`] = `
<header
  className="MuiPaper-root MuiAppBar-root MuiAppBar-positionRelative MuiAppBar-colorPrimary MuiPaper-elevation2"
>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <button
      aria-label="Toggle menu"
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <i
          aria-hidden={true}
          className="material-icons MuiIcon-root NatDSIcon-root-89 NatDSIcon-root-90 filled-navigation-menu"
        >
          
        </i>
      </span>
    </button>
    <div
      className="NatDSAppBarHighlight NatDSAppBarHighlight-root-91"
    >
      <h1
        className="MuiTypography-root MuiTypography-h6"
      >
        AppBar
      </h1>
    </div>
    <button
      aria-label="Search"
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <i
          aria-hidden={true}
          className="material-icons MuiIcon-root NatDSIcon-root-89 NatDSIcon-root-92 outlined-action-search"
        >
          
        </i>
      </span>
    </button>
    <button
      aria-label="Filter"
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <span
          className="MuiBadge-root"
        >
          <i
            aria-hidden={true}
            className="material-icons MuiIcon-root NatDSIcon-root-89 NatDSIcon-root-93 outlined-action-filter"
          >
            
          </i>
          <span
            className="MuiTypography-root MuiTypography-srOnly"
          >
            Filters (1 active)
          </span>
          <span
            className="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorSecondary"
          >
            1
          </span>
        </span>
      </span>
    </button>
    <button
      aria-label="My Profile"
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <i
          aria-hidden={true}
          className="material-icons MuiIcon-root NatDSIcon-root-89 NatDSIcon-root-94 outlined-social-myprofile"
        >
          
        </i>
      </span>
    </button>
  </div>
</header>
`;

exports[`Storyshots Components/App Bar With Prominent Toolbar 1`] = `
<span
  className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
  style={
    Object {
      "height": "",
      "width": "",
    }
  }
/>
`;

exports[`Storyshots Components/App Bar With Tabs 1`] = `
<header
  className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorDefault NatDSAppBar-colorDefault-67 MuiPaper-elevation2"
>
  <div
    className="MuiTabs-root"
  >
    <div
      className="MuiTabs-scroller MuiTabs-fixed"
      onScroll={[Function]}
      style={
        Object {
          "marginBottom": null,
          "overflow": "hidden",
        }
      }
    >
      <div
        className="MuiTabs-flexContainer"
        onKeyDown={[Function]}
        role="tablist"
      >
        <button
          aria-controls="favorites-tab"
          aria-selected={true}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-selected MuiTab-labelIcon MuiTab-fullWidth"
          disabled={false}
          id="favorites-tab"
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiTab-wrapper"
          >
            <i
              aria-hidden={true}
              className="material-icons MuiIcon-root NatDSIcon-root-68 NatDSIcon-root-69 outlined-action-love"
            >
              
            </i>
            Favorites
          </span>
          <span
            className="PrivateTabIndicator-root-70 PrivateTabIndicator-colorSecondary-72 MuiTabs-indicator"
            style={Object {}}
          />
        </button>
        <button
          aria-controls="outlet-tab"
          aria-selected={false}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon MuiTab-fullWidth"
          disabled={false}
          id="outlet-tab"
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="MuiTab-wrapper"
          >
            <i
              aria-hidden={true}
              className="material-icons MuiIcon-root NatDSIcon-root-68 NatDSIcon-root-74 outlined-product-outlet"
            >
              
            </i>
            Outlet
          </span>
        </button>
        <button
          aria-controls="products-tab"
          aria-selected={false}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon MuiTab-fullWidth"
          disabled={false}
          id="products-tab"
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="MuiTab-wrapper"
          >
            <i
              aria-hidden={true}
              className="material-icons MuiIcon-root NatDSIcon-root-68 NatDSIcon-root-75 outlined-product-brandsproduct"
            >
              
            </i>
            Products
          </span>
        </button>
        <button
          aria-controls="makeup-tab"
          aria-selected={false}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon MuiTab-fullWidth"
          disabled={false}
          id="makeup-tab"
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="MuiTab-wrapper"
          >
            <i
              aria-hidden={true}
              className="material-icons MuiIcon-root NatDSIcon-root-68 NatDSIcon-root-76 outlined-product-makeup"
            >
              
            </i>
            Makeup
          </span>
        </button>
      </div>
    </div>
  </div>
</header>
`;
